unpackaged/main/default/objects/Case/fields/About_the_Agent_Page__c.field-meta.xml
<CustomField>
    <fullName>About_the_Agent_Page__c</fullName>
    <inlineHelpText>Please let us know what updates you would like our team to make on the About the agent page.</inlineHelpText>
    <label>About the Agent Page</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>