unpackaged/main/default/objects/Case/fields/About_the_Listing_Assets__c.field-meta.xml
<CustomField>
    <fullName>About_the_Listing_Assets__c</fullName>
    <inlineHelpText>Please upload any assets needed to make the edits.</inlineHelpText>
    <label>About the Listing Assets</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>