unpackaged/main/default/objects/Case/fields/About_the_Listing_Page__c.field-meta.xml
<CustomField>
    <fullName>About_the_Listing_Page__c</fullName>
    <inlineHelpText>Please let us know what updates you would like our team to make on the about page.</inlineHelpText>
    <label>About the Listing Page</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>