unpackaged/main/default/objects/Case/fields/Actual_Ops_Effort_Points__c.field-meta.xml
<CustomField>
    <fullName>Actual_Ops_Effort_Points__c</fullName>
    <label>Actual Ops Effort Points</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>