unpackaged/main/default/objects/Case/fields/Ad_1__c.field-meta.xml
<CustomField>
    <fullName>Ad_1__c</fullName>
    <label>Ad #1</label>
    <type>Url</type>
</CustomField>