unpackaged/main/default/objects/Case/fields/Ad_2__c.field-meta.xml
<CustomField>
    <fullName>Ad_2__c</fullName>
    <label>Ad #2</label>
    <type>Url</type>
</CustomField>