unpackaged/main/default/objects/Case/fields/Addendum_Execution_Date__c.field-meta.xml
<CustomField>
    <fullName>Addendum_Execution_Date__c</fullName>
    <description>Date of when the addendum for a downgrade or cancel will execute</description>
    <label>Addendum Execution Date</label>
    <type>Date</type>
</CustomField>