unpackaged/main/default/objects/Case/fields/Additional_assets__c.field-meta.xml
<CustomField>
    <fullName>Additional_assets__c</fullName>
    <label>Additional assets</label>
    <type>TextArea</type>
</CustomField>