unpackaged/main/default/objects/Case/fields/Additional_Revision_Requests__c.field-meta.xml
<CustomField>
    <fullName>Additional_Revision_Requests__c</fullName>
    <inlineHelpText>Please add additional revision requests to this field.</inlineHelpText>
    <label>Additional Revision Requests</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>