unpackaged/main/default/objects/Case/fields/Agent_email__c.field-meta.xml
<CustomField>
    <fullName>Agent_email__c</fullName>
    <label>Agent email</label>
    <type>Email</type>
</CustomField>