unpackaged/main/default/objects/Case/fields/Agent_phone_number__c.field-meta.xml
<CustomField>
    <fullName>Agent_phone_number__c</fullName>
    <label>Agent phone number</label>
    <type>TextArea</type>
</CustomField>