unpackaged/main/default/objects/Case/fields/Agent_s_bio__c.field-meta.xml
<CustomField>
    <fullName>Agent_s_bio__c</fullName>
    <label>Agent&#39;s bio</label>
    <type>TextArea</type>
</CustomField>