unpackaged/main/default/objects/Case/fields/Agent_s_email__c.field-meta.xml
<CustomField>
    <fullName>Agent_s_email__c</fullName>
    <label>Agent&#39;s email</label>
    <type>Email</type>
</CustomField>