unpackaged/main/default/objects/Case/fields/Agent_s_name__c.field-meta.xml
<CustomField>
    <fullName>Agent_s_name__c</fullName>
    <label>Agent&#39;s name</label>
    <type>TextArea</type>
</CustomField>