unpackaged/main/default/objects/Case/fields/Agent_s_phone_number__c.field-meta.xml
<CustomField>
    <fullName>Agent_s_phone_number__c</fullName>
    <label>Agent&#39;s phone number</label>
    <type>Phone</type>
</CustomField>