unpackaged/main/default/objects/Case/fields/AHT__c.field-meta.xml
<CustomField>
    <fullName>AHT__c</fullName>
    <label>AHT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>