unpackaged/main/default/objects/Case/fields/Already_own_the_domain__c.field-meta.xml
<CustomField>
    <fullName>Already_own_the_domain__c</fullName>
    <inlineHelpText>DO YOU ALREADY OWN THE DOMAIN YOU WISH TO USE FOR THIS PROPERTY WEBSITE?</inlineHelpText>
    <label>Already own the domain</label>
    <type>TextArea</type>
</CustomField>