unpackaged/main/default/objects/Case/fields/Amenties_section__c.field-meta.xml
<CustomField>
    <fullName>Amenties_section__c</fullName>
    <label>Amenties section</label>
    <type>TextArea</type>
</CustomField>