unpackaged/main/default/objects/Case/fields/Amenties_section_assets__c.field-meta.xml
<CustomField>
    <fullName>Amenties_section_assets__c</fullName>
    <label>Amenties section assets</label>
    <type>TextArea</type>
</CustomField>