unpackaged/main/default/objects/Case/fields/Anayone_can_send__c.field-meta.xml
<CustomField>
    <fullName>Anayone_can_send__c</fullName>
    <label>Anayone can send</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>