unpackaged/main/default/objects/Case/fields/Anyone_can_send_this_SFA__c.field-meta.xml
<CustomField>
    <fullName>Anyone_can_send_this_SFA__c</fullName>
    <label>Anyone can send this SFA?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>