unpackaged/main/default/objects/Case/fields/Anything_else_we_should_know__c.field-meta.xml
<CustomField>
    <fullName>Anything_else_we_should_know__c</fullName>
    <label>Anything else we should know?</label>
    <type>TextArea</type>
</CustomField>