unpackaged/main/default/objects/Case/fields/Asana_Task__c.field-meta.xml
<CustomField>
    <fullName>Asana_Task__c</fullName>
    <inlineHelpText>Please indicate the Asana task.</inlineHelpText>
    <label>Asana Task</label>
    <type>TextArea</type>
</CustomField>