unpackaged/main/default/objects/Case/fields/Assigned_VA__c.field-meta.xml
<CustomField>
    <fullName>Assigned_VA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned VA</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases5</relationshipName>
    <type>Lookup</type>
</CustomField>