unpackaged/main/default/objects/Case/fields/Assignee__c.field-meta.xml
<CustomField>
    <fullName>Assignee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assignee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>