unpackaged/main/default/objects/Case/fields/Audit__c.field-meta.xml
<CustomField>
    <fullName>Audit__c</fullName>
    <formula>Service_Schedule__r.Service__r.Audit_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Audit</label>
    <type>Text</type>
</CustomField>