unpackaged/main/default/objects/Case/fields/Awaiting_Client_Response_Date__c.field-meta.xml
<CustomField>
    <fullName>Awaiting_Client_Response_Date__c</fullName>
    <label>Awaiting Client Response Date</label>
    <type>Date</type>
</CustomField>