unpackaged/main/default/objects/Case/fields/Beds__c.field-meta.xml
<CustomField>
    <fullName>Beds__c</fullName>
    <label>Beds</label>
    <length>10</length>
    <type>Text</type>
</CustomField>