unpackaged/main/default/objects/Case/fields/Brokerage__c.field-meta.xml
<CustomField>
    <fullName>Brokerage__c</fullName>
    <label>Brokerage</label>
    <length>100</length>
    <type>Text</type>
</CustomField>