unpackaged/main/default/objects/Case/fields/Business_System_Analyst__c.field-meta.xml
<CustomField>
    <fullName>Business_System_Analyst__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business System Analyst</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases4</relationshipName>
    <type>Lookup</type>
</CustomField>