unpackaged/main/default/objects/Case/fields/Buy_in_Alignment__c.field-meta.xml
<CustomField>
    <fullName>Buy_in_Alignment__c</fullName>
    <label>Buy-in &amp; Alignment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <label>🟢N/A</label>
            </value>
            <value>
                <fullName>Not started</fullName>
                <label>🟠Not started</label>
            </value>
            <value>
                <fullName>In progress</fullName>
                <label>🟡In progress</label>
            </value>
            <value>
                <fullName>Complete</fullName>
                <label>🟢Complete</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>