unpackaged/main/default/objects/Case/fields/Case_18_Digit_ID__c.field-meta.xml
<CustomField>
    <fullName>Case_18_Digit_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case 18 Digit ID</label>
    <type>Text</type>
</CustomField>