unpackaged/main/default/objects/Case/fields/Case_Reason_1__c.field-meta.xml
<CustomField>
    <fullName>Case_Reason_1__c</fullName>
    <description>Primary case reason
updates made via ticket #00190723 &amp; 00210175</description>
    <inlineHelpText>Populate based on the Primary Case Reason</inlineHelpText>
    <label>Case Reason 1</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Team_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Website Builder</fullName>
            </value>
            <value>
                <fullName>CMS</fullName>
            </value>
            <value>
                <fullName>Domains</fullName>
            </value>
            <value>
                <fullName>IDX</fullName>
            </value>
            <value>
                <fullName>Agent Subdomain</fullName>
            </value>
            <value>
                <fullName>Analytics</fullName>
            </value>
            <value>
                <fullName>Brokerage Change</fullName>
            </value>
            <value>
                <fullName>Bug</fullName>
            </value>
            <value>
                <fullName>Cases</fullName>
            </value>
            <value>
                <fullName>Client Meeting</fullName>
            </value>
            <value>
                <fullName>Another LP Team</fullName>
            </value>
            <value>
                <fullName>Copilot</fullName>
            </value>
            <value>
                <fullName>Copywriting</fullName>
            </value>
            <value>
                <fullName>Feature Request</fullName>
            </value>
            <value>
                <fullName>HST</fullName>
            </value>
            <value>
                <fullName>Instagram</fullName>
            </value>
            <value>
                <fullName>Leads</fullName>
            </value>
            <value>
                <fullName>Listing Feeds</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Paid Media</fullName>
            </value>
            <value>
                <fullName>Presentations</fullName>
            </value>
            <value>
                <fullName>RSS Feed</fullName>
            </value>
            <value>
                <fullName>SEO Client</fullName>
                <label>SEO</label>
            </value>
            <value>
                <fullName>Self-Serve Property Sites (Paid)</fullName>
            </value>
            <value>
                <fullName>Subscription</fullName>
            </value>
            <value>
                <fullName>Spam</fullName>
            </value>
            <value>
                <fullName>Users</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Google Business Profile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>