unpackaged/main/default/objects/Case/fields/Case_Reason_3__c.field-meta.xml
<CustomField>
    <fullName>Case_Reason_3__c</fullName>
    <label>Case Reason 3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Edit Request</fullName>
            </value>
            <value>
                <fullName>Another LP Team</fullName>
            </value>
            <value>
                <fullName>How to Question</fullName>
            </value>
            <value>
                <fullName>Subscription Question</fullName>
            </value>
            <value>
                <fullName>Login Question</fullName>
            </value>
            <value>
                <fullName>Cancelation Request</fullName>
            </value>
            <value>
                <fullName>Stackpath</fullName>
            </value>
            <value>
                <fullName>Bug Report</fullName>
            </value>
            <value>
                <fullName>Feature Request</fullName>
            </value>
            <value>
                <fullName>SEO Question</fullName>
            </value>
            <value>
                <fullName>Site Down Report</fullName>
            </value>
            <value>
                <fullName>Leads</fullName>
            </value>
            <value>
                <fullName>Google Analytics</fullName>
            </value>
            <value>
                <fullName>Copywriting</fullName>
            </value>
            <value>
                <fullName>Upcoming Event</fullName>
            </value>
            <value>
                <fullName>Design Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>