unpackaged/main/default/objects/Case/fields/Case_Sub_Reason_1__c.field-meta.xml
<CustomField>
    <fullName>Case_Sub_Reason_1__c</fullName>
    <description>identify the sub reason for Case Reason 1 (primary reason)</description>
    <label>Case Sub Reason 1</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Case_Reason_1__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>(Google) Tag Implementation</fullName>
            </value>
            <value>
                <fullName>1:1 Design Change</fullName>
            </value>
            <value>
                <fullName>Activate/ Remove Agent Sync</fullName>
            </value>
            <value>
                <fullName>Activate/ Remove Buyer Sync</fullName>
            </value>
            <value>
                <fullName>Activate/ Remove Office Sync</fullName>
            </value>
            <value>
                <fullName>ADA Compliance</fullName>
            </value>
            <value>
                <fullName>Add/ Remove Elements</fullName>
            </value>
            <value>
                <fullName>Add/Remove User</fullName>
            </value>
            <value>
                <fullName>Agent Bios</fullName>
            </value>
            <value>
                <fullName>Agents / Teams</fullName>
            </value>
            <value>
                <fullName>AI Lead Nurture</fullName>
            </value>
            <value>
                <fullName>Blog</fullName>
            </value>
            <value>
                <fullName>Blog Page</fullName>
            </value>
            <value>
                <fullName>Blogs</fullName>
            </value>
            <value>
                <fullName>Bug- Incorrect Data About a Property</fullName>
            </value>
            <value>
                <fullName>Bug- Tool Not Working</fullName>
            </value>
            <value>
                <fullName>Can&#39;t Publish Property Website</fullName>
            </value>
            <value>
                <fullName>Can&#39;t Publish Site- DNS Issue</fullName>
            </value>
            <value>
                <fullName>Can&#39;t Publish Site- Platform Issue</fullName>
            </value>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>Change User Email</fullName>
            </value>
            <value>
                <fullName>Checking on Existing Case</fullName>
            </value>
            <value>
                <fullName>Client Reports Missing Listings</fullName>
            </value>
            <value>
                <fullName>CMA Data</fullName>
            </value>
            <value>
                <fullName>CMS</fullName>
            </value>
            <value>
                <fullName>Connect/ Disconnect</fullName>
            </value>
            <value>
                <fullName>Connect to CSM</fullName>
            </value>
            <value>
                <fullName>Contact Form Edits</fullName>
            </value>
            <value>
                <fullName>Delete Property Website</fullName>
            </value>
            <value>
                <fullName>Delete Saved Searches</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>