unpackaged/main/default/objects/Case/fields/Case_Sub_Reason_2__c.field-meta.xml
<CustomField>
    <fullName>Case_Sub_Reason_2__c</fullName>
    <description>Identify the secondary sub reason, optional.</description>
    <label>Case Sub Reason 2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Case_Reason_2__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CMS</fullName>
            </value>
            <value>
                <fullName>Page Builder</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>People</fullName>
            </value>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>CSM</fullName>
            </value>
            <value>
                <fullName>IDX</fullName>
            </value>
            <value>
                <fullName>Reporting</fullName>
            </value>
            <value>
                <fullName>Listing Feeds</fullName>
            </value>
            <value>
                <fullName>One Click Property Sites</fullName>
            </value>
            <value>
                <fullName>Home Search Tool</fullName>
            </value>
            <value>
                <fullName>Self Serve Property Websites</fullName>
            </value>
            <value>
                <fullName>Presentations</fullName>
            </value>
            <value>
                <fullName>DNS record change</fullName>
            </value>
            <value>
                <fullName>Domain change</fullName>
            </value>
            <value>
                <fullName>IDX issue</fullName>
            </value>
            <value>
                <fullName>Non-IDX issue</fullName>
            </value>
            <value>
                <fullName>Zapier connection</fullName>
            </value>
            <value>
                <fullName>CRM integration</fullName>
            </value>
            <value>
                <fullName>Lead alert notification</fullName>
            </value>
            <value>
                <fullName>Adding a user</fullName>
            </value>
            <value>
                <fullName>Question</fullName>
            </value>
            <value>
                <fullName>LPEvent</fullName>
                <label>Luxury Presence Event</label>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
            <value>
                <fullName>Brokerage change</fullName>
            </value>
            <value>
                <fullName>Elective</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>