unpackaged/main/default/objects/Case/fields/Case_Survey_Sent__c.field-meta.xml
<CustomField>
    <fullName>Case_Survey_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set by Delighted Support Case Survey when a case is closed and survey is sent</description>
    <label>Case Survey Sent</label>
    <type>Checkbox</type>
</CustomField>