unpackaged/main/default/objects/Case/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <inlineHelpText>WEBSITE BUILDER - Update links, issue redirects, delete &amp; duplicate page, update/upload/resize photo, update page contents, update/upload logo, add modal. CSS/ADVANCED - Multiple requests, update branding (colors, logo), property sync (missing/incorrect listings), custom page creation, CSS &amp; script application (iframe/widgets/embedded codes), website responsiveness, creating agent subdomain, mix of Website Builder and Content tasks. CONTENT/DATA SPECIALIST - Bulk adding/updating/deleting any CMS content</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Edits we taught the client to do</fullName>
            </value>
            <value>
                <fullName>Edits that Require Support</fullName>
            </value>
            <value>
                <fullName>IDX / Listings</fullName>
            </value>
            <value>
                <fullName>Edits the Client Cloud Do (but we did them)</fullName>
            </value>
            <value>
                <fullName>Website Refresh/ReDesign</fullName>
            </value>
            <value>
                <fullName>Log in Questions</fullName>
            </value>
            <value>
                <fullName>Jira Ticket</fullName>
            </value>
            <value>
                <fullName>DNS</fullName>
            </value>
            <value>
                <fullName>Integrations</fullName>
            </value>
            <value>
                <fullName>Widgets</fullName>
            </value>
            <value>
                <fullName>Copywriting</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
            <value>
                <fullName>Google</fullName>
            </value>
            <value>
                <fullName>Leads</fullName>
            </value>
            <value>
                <fullName>Property Websites</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>SEO</fullName>
            </value>
            <value>
                <fullName>Brokerage Change</fullName>
            </value>
            <value>
                <fullName>Data Specialist</fullName>
                <label>Content/Data Specialist</label>
            </value>
            <value>
                <fullName>CSS/Advanced</fullName>
            </value>
            <value>
                <fullName>Website Builder</fullName>
            </value>
            <value>
                <fullName>Bug Report / Technical  Issue</fullName>
                <isActive>false</isActive>
                <label>Bug Report / Technical  Issue</label>
            </value>
            <value>
                <fullName>Call: Finance</fullName>
                <isActive>false</isActive>
                <label>Call: Finance</label>
            </value>
            <value>
                <fullName>Call: HR</fullName>
                <isActive>false</isActive>
                <label>Call: HR</label>
            </value>
            <value>
                <fullName>Call: Implementation</fullName>
                <isActive>false</isActive>
                <label>Call: Implementation</label>
            </value>
            <value>
                <fullName>Call: Support</fullName>
                <isActive>false</isActive>
                <label>Call: Support</label>
            </value>
            <value>
                <fullName>Cancelation Request</fullName>
                <isActive>false</isActive>
                <label>Cancelation Request</label>
            </value>
            <value>
                <fullName>Cloudflare Email</fullName>
                <isActive>false</isActive>
                <label>Cloudflare Email</label>
            </value>
            <value>
                <fullName>Customization</fullName>
                <isActive>false</isActive>
                <label>Customization</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>