unpackaged/main/default/objects/Case/fields/Chat_Transcript__c.field-meta.xml
<CustomField>
    <fullName>Chat_Transcript__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chat Transcript</label>
    <referenceTo>LiveChatTranscript</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>