unpackaged/main/default/objects/Case/fields/Churn_Probability_Case__c.field-meta.xml
<CustomField>
    <fullName>Churn_Probability_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Churn Probability Case</label>
    <type>Checkbox</type>
</CustomField>