unpackaged/main/default/objects/Case/fields/Churn_Reason__c.field-meta.xml
<CustomField>
    <fullName>Churn_Reason__c</fullName>
    <label>Churn Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Performance</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Service/Experience</fullName>
            </value>
            <value>
                <fullName>Structural Churn</fullName>
            </value>
            <value>
                <fullName>Saved</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>