unpackaged/main/default/objects/Case/fields/Client_Folder__c.field-meta.xml
<CustomField>
    <fullName>Client_Folder__c</fullName>
    <formula>HYPERLINK( Account.Client_Folder__c, &quot;Client folder&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Folder</label>
    <type>Text</type>
</CustomField>