unpackaged/main/default/objects/Case/fields/Client_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Name__c</fullName>
    <label>Client Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>