unpackaged/main/default/objects/Case/fields/Close_Case__c.field-meta.xml
<CustomField>
    <fullName>Close_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Close Case</label>
    <type>Checkbox</type>
</CustomField>